--- a/vignettes/patchclampplotteR.Rmd
+++ b/vignettes/patchclampplotteR.Rmd
@@ -28,7 +28,7 @@ transforming raw data into publication-quality plots!
 ## Install and load package
 
 You can install the development version of patchclampplotteR from
-[GitHub](https://github.com/). Only do this once per computer, or if there's a major update.
+[GitHub](https://github.com/christelinda-laureijs/patchclampplotteR). Only do this once per computer, or if there's a major update.
 
 ```{r install-package-demo, eval=F, warning=FALSE, message=FALSE}
 pak::pak("christelinda-laureijs/patchclampplotteR")
