--- a/vignettes/articles/evoked-current-analysis.Rmd
+++ b/vignettes/articles/evoked-current-analysis.Rmd
@@ -53,7 +53,7 @@ knitr::include_graphics("figures/Concatenate-files.png")
 
 5. You can also click on the `Auto Scale All Y Axes` button (orange arrow) to help you see the data faster.
 
-```{r viewer-buttons, out.width="25%", fig.alt = "A screenshot of the Show Signals buttons and other viewering buttons available in the upper toolbar in Clampfit."}
+```{r viewer-buttons, out.width="25%", fig.alt = "A screenshot of the Show Signals buttons and other viewing buttons available in the upper toolbar in Clampfit."}
 knitr::include_graphics("figures/Viewer-buttons.png")
 ```
 
@@ -144,4 +144,3 @@ If you see two peaks instead of one expected evoked current, this could be an ex
 You should save a new .csv file for each new batch of raw data (these are the .csv files with `Letter`, `ID`, `P1` and `P2`). You may find it efficient to wait until you have a week of recordings, then analyze these recordings all at once in Clampfit. These data will be in a .csv file named something like `20240708-eEPSC-data.csv`.
 
 However, when writing a paper or thesis, you will use just one master csv file which contains the evoked current data for all recordings in the entire project. To append new data to this master csv, use the `add_new_cells()` function. Please see `vignette("patchclampplotteR")` for more details.
-
